--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-title" content="꼬띠샵 l 반려동물에게 줄 수 있는 최고의 선물" />
   <meta name="description" content="우리가 진짜를 구입하고 그 가치를 평생 느끼며 만족하고 즐기는 것처럼 우리의 반려동물들도 값진 소재에 더해진 장인의 손길과 시간이 흘러도 세련된 디자인을 누리기에 충분합니다." />
-
   <title>꼬띠샵 l 반려동물에게 줄 수 있는 최고의 선물</title>
-
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="꼬띠샵" />
@@ -16,7 +14,6 @@
   <meta property="og:description" content="우리가 진짜를 구입하고 그 가치를 평생 느끼며 만족하고 즐기는 것처럼 우리의 반려동물들도 값진 소재에 더해진 장인의 손길과 시간이 흘러도 세련된 디자인을 누리기에 충분합니다." />
   <meta property="og:image" content="./img/og_image.jpg" />
   <meta property="og:url" content="https://jeon-hyerin.github.io/cotieshop/" />
-
     <!--Twitter Card-->
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:site" content="꼬띠샵" />
@@ -24,17 +21,8 @@
   <meta property="twitter:description" content="우리가 진짜를 구입하고 그 가치를 평생 느끼며 만족하고 즐기는 것처럼 우리의 반려동물들도 값진 소재에 더해진 장인의 손길과 시간이 흘러도 세련된 디자인을 누리기에 충분합니다." />
   <meta property="twitter:image" content="./img/og_image.jpg" />
   <meta property="twitter:url" content="https://jeon-hyerin.github.io/cotieshop" />
-
   <!-- Favicon -->
   <link rel="shortcut icon" href="./favicon.png" />
-  <!-- Google Fonts - Noto Sans KR -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet" />
-<!-- Google Fonts - Libre Baskerville -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
   <!-- Google Material Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <!-- Font Awesome -->
@@ -48,20 +36,19 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>  
   <!--GSAP-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
-
+  <!-- CSS -->
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style_pc.css" media="screen and (min-width: 850.1px)" />
   <link rel="stylesheet" href="./css/style_mobile.css" media="screen and (max-width: 850.0px)" />
-
+  <!-- JS -->
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script defer src="./js/swiper.js"></script>
   <script defer src="./js/common.js"></script>
-
 </head>
 <body class="main">
+
   <div id="wrapper">
     <a href="#main" id="skip-nav">본문 바로가기</a>
-
     <!-- HEADER -->
     <header id="header">
       <div class="inner">
@@ -74,40 +61,39 @@
         <a href="#" class="close-btn mobile invisible">
           <i class="fas fa-times"><span>네비게이션 닫기</span></i>
         </a>
-        <!-- NAV -->
         <nav id="gnb">
           <h2 class="hide">메인 네비게이션</h2>
           <ul>
             <li data-link="brands">
-              <a href="./brands.html">Brands</a>
+              <a href="./html/brands.html">Brands</a>
               <ul class="sub-menu">
                 <li data-menu="pet-so-chic">
                   <a href="#"><span>펫 소 시크</span></a>
                 </li>
                 <li data-menu="maxbone"><a href="#"><span>맥스본</span></a></li>
-                <li data-menu="milk-pepper"><a href="./brands.html"><span>밀크 앤 페퍼</span></a></li>
+                <li data-menu="milk-pepper"><a href="./html/brands.html"><span>밀크 앤 페퍼</span></a></li>
               </ul>
             </li>
             <li data-link="outdoor">
-              <a href="./outdoor.html">Outdoor</a>
+              <a href="./html/outdoor.html">Outdoor</a>
               <ul class="sub-menu">
-                <li data-menu="fashion"><a href="./outdoor.html"><span>패션</span></a></li>
-                <li data-menu="collar"><a href="./outdoor/collar.html"><span>목줄</span></a></li>
-                <li data-menu="leash"><a href="./outdoor/leash.html"><span>리드줄</span></a></li>
-                <li data-menu="harness"><a href="./outdoor/harness.html"><span>하네스</span></a></li>
-                <li data-menu="bag"><a href="./outdoor/bag.html"><span>이동가방</span></a></li>
+                <li data-menu="fashion"><a href="./html/outdoor.html"><span>패션</span></a></li>
+                <li data-menu="collar"><a href="./html/collar.html"><span>목줄</span></a></li>
+                <li data-menu="leash"><a href="./html/leash.html"><span>리드줄</span></a></li>
+                <li data-menu="harness"><a href="./html/harness.html"><span>하네스</span></a></li>
+                <li data-menu="bag"><a href="./html/bag.html"><span>이동가방</span></a></li>
               </ul>
             </li>
             <li data-link="indoor">
-              <a href="./indoor.html">Indoor</a>
+              <a href="./html/indoor.html">Indoor</a>
               <ul class="sub-menu">
-                <li data-menu="toy"><a href="./indoor.html"><span>장난감</span></a></li>
-                <li data-menu="living"><a href="./indoor/living.html"><span>리빙</span></a></li>
-                <li data-menu="cat"><a href="./indoor/cat.html"><span>고양이</span></a></li>
+                <li data-menu="toy"><a href="./html/indoor.html"><span>장난감</span></a></li>
+                <li data-menu="living"><a href="./html/living.html"><span>리빙</span></a></li>
+                <li data-menu="cat"><a href="./html/cat.html"><span>고양이</span></a></li>
               </ul>
             </li>
-            <li data-link="cotielog"><a href="./cotielog.html">Cotielog</a></li>
-            <li data-link="store"><a href="./store.html">Store</a></li>
+            <li data-link="cotielog"><a href="./html/cotielog.html">Cotielog</a></li>
+            <li data-link="store"><a href="./html/store.html">Store</a></li>
             <li data-link="about-us" class="mobile"><a href="#">About Us</a></li>
             <li data-link="buy-shop" class="mobile"><a href="#">Buy Shop</a></li>
           </ul>
@@ -126,17 +112,13 @@
             </a>
           </li>
         </ul>
-
       </div>
     </header>
-
     <!-- SEARCH MODAL -->
     <div class="search-modal__wrap invisible">
       <div id="search-modal">
         <div class="inner">
-
           <h2 class="hide">검색창</h2>
-
           <div class="search-modal__header">
             <a href="./index.html" class="logo pc">
               <img src="./img/header_logo.svg" alt="cotie SHOP" />
@@ -166,15 +148,12 @@
         </div>
       </div>
     </div>
-
     <!-- MAIN -->
     <main id="main">
-
       <!-- VISUAL -->
       <section class="main-visual visual">
         <h2 class="hide">비주얼 영역</h2>
         <div class="inner">
-
           <h3 class="title">
             Every Pet Deserves<br />
             The Best
@@ -194,7 +173,6 @@
           <img src="./img/floating_bone.png" alt="" class="floating floating3" />
         </div>
       </section>
-
       <!-- BRAND -->
       <section class="main-brand">
         <h2 class="hide">브랜드 영역</h2>
@@ -249,8 +227,6 @@
                 </a>
               </div>
             </div>
-
-
             <div class="video__area">
               <video src="./video/maxbone.mp4" autoplay muted loop preload="metadata" playsinline
                 poster="./img/maxbone_poster.jpg"></video>
@@ -282,14 +258,11 @@
           </div>
         </div>
       </section>
-
       <!-- NEW -->
       <section class="main-new product scroll-spy">
         <h2 class="hide">꼬띠샵 신상품</h2>
         <div class="inner">
-
           <h3>New</h3>
-
           <div class="swiper pc">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -479,14 +452,11 @@
               </a>
             </li>
           </ul>
-
         </div>
       </section>
-
       <!-- SLOGAN -->
       <section class="main-slogan slogan">
         <h2 class="hide">꼬띠샵 슬로건</h2>
-
         <div class="text-group">
           <span>PET SO CHIC</span>
           <span>MAXBONE</span>
@@ -502,14 +472,11 @@
           <span>MILK &amp; PEPPER</span>
         </div>
       </section>
-
       <!-- COTIELOG -->
       <section class="main-cotielog scroll-spy">
         <h2 class="hide">꼬띠샵 소식지</h2>
         <div class="inner">
-
           <h3>Cotielog</h3>
-
           <ul class="main-cotielog__menu">
             <li class="movement to-top delay-0">
               <a href="#">
@@ -547,15 +514,12 @@
           <a href="#" class="btn">
             <i class="fas fa-plus"></i><span>more</span>
           </a>
-
         </div>
       </section>
-
       <!-- INSTAGRAM -->
       <section class="main-instagram">
         <h2 class="hide">꼬띠샵 인스타그램</h2>
         <div class="inner">
-
           <h3>Instagram<br class="only-m" />@cotie_shop</h3>
           <ul class="main-instagram__menu pc">
             <li>
@@ -604,12 +568,10 @@
         </div>
       </section>
     </main>
-
     <!-- FOOTER -->
     <footer id="footer">
       <div class="footer__layer"></div>
       <div class="inner">
-
         <div class="row">
           <ul class="footer__menu">
             <li><a href="#">About Us</a></li>
@@ -656,7 +618,6 @@
         </div>
       </div>
     </footer>
-
     <!-- TO TOP BUTTON -->
     <a href="#" id="to-top">
       <i class="fas fa-chevron-up"></i>
@@ -667,12 +628,165 @@
         <img src="./img/punch1.svg" alt="" class="punch" />
       </div>
     </a>
-
   </div>
+
 
   <script>
     'use strict';
 
+    // header영역
+    var header = document.querySelector('#header');
+
+    window.addEventListener('scroll', function () {
+      if (window.pageYOffset > 0) {
+        header.classList.add('active');
+      } else {
+        header.classList.remove('active');
+      }
+    });
+
+    // gnb영역
+    $('#gnb > ul > li > a').on('mouseenter focusin', function () {
+      if ($(window).width() >= 1024) {
+        var index = $('#gnb > ul > li').index($(this).parent());
+        $('#gnb > ul > li').removeClass('on');
+        $('#gnb > ul > li:eq(' + index + ')').addClass('on');
+      }
+    });
+
+    $('#header').on('mouseleave', function () {
+      $('#gnb > ul > li').removeClass('on');
+    });
+
+    setCurrentNav();
+
+    function setCurrentNav() {
+      var bodyClass = $('body').attr('class');
+      var splitClass = bodyClass.split(' ');
+      if (splitClass[0] === 'main') {
+        return false;
+      }
+
+      $('#gnb > ul > li').each(function (i) {
+        if ($(this).attr('data-link') === splitClass[1]) {
+          $(this).addClass('selected');
+        }
+      });
+
+      $('#gnb > ul > li.selected > .sub-menu > li').each(function (i) {
+        if (splitClass[2] === undefined || splitClass[2] === null) {
+          return false;
+        }
+        if ($(this).attr('data-menu') === splitClass[2]) {
+          $(this).addClass('selected');
+        }
+      });
+    }
+
+    // 검색창 toggle
+    $('#header .top-menu li:eq(0) a').on('click', function () {
+      $('.search-modal__wrap').removeClass('invisible');
+      enable();
+    });
+
+    $('.search-modal__header .close-btn').on('click', function () {
+      $('.search-modal__wrap').addClass('invisible');
+      disable();
+    });
+
+    // 모바일 메뉴
+    $('#header .menu-btn').on('click', function () {
+      $(this).addClass('invisible');
+      $('#header .close-btn').removeClass('invisible');
+      $('#gnb').addClass('open');
+      $('#gnb > ul > li.active > a').trigger('click');
+      enable();
+    });
+
+    $('#header .close-btn').on('click', function () {
+      $(this).addClass('invisible');
+      $('#header .menu-btn').removeClass('invisible');
+      $('#gnb').removeClass('open');
+      $('#gnb > ul > li.selected > a').trigger('click');
+      disable();
+    });
+
+    $('#gnb > ul > li > a').on('click focusin', function (event) {
+      if ($(window).width() < 1024) {
+        if ($(this).parent().find('ul').length > 0) {
+          event.preventDefault();
+        }
+        var index = $('#gnb > ul > li').index($(this).parent());
+        $('#gnb > ul > li').removeClass('selected');
+        $('#gnb > ul > li:eq(' + index + ')').addClass('selected');
+      }
+    });
+
+    $(window).on('resize', function () {
+      if ($(window).width() >= 1024) {
+        if ($('#gnb').hasClass('open') === true) {
+          disable();
+        }
+      } else if ($('#gnb').hasClass('open') === true) {
+        $('#header .menu-btn').trigger('click');
+      }
+    });
+
+    // 올해년도 구하기
+    var thisYear = document.querySelector('.this-year');
+    thisYear.textContent = new Date().getFullYear();
+
+    // footer info toggle
+    var footerInfo = document.querySelector('#footer .info');
+    var footerToggleBtn = footerInfo.querySelector('a');
+    footerToggleBtn.addEventListener('click', function () {
+      footerInfo.classList.toggle('open');
+      if (footerInfo.classList.contains('open')) {
+        var height = 0;
+        height = $('#footer .info > div > .wrap').outerHeight(true);
+        $('#footer .info').find('> div').css({
+          'height': height + 'px'
+        });
+      } else {
+        $('#footer .info').find('> div').css({
+          'height': '0px'
+        });
+      }
+    });
+
+    var footer = document.querySelector('#footer');
+    var footerHeight = footer.getBoundingClientRect().height;
+    var toTopBtn = document.querySelector('#to-top');
+    var wrapper = document.querySelector('#wrapper');
+
+    window.addEventListener('scroll', _.throttle(function () {
+      if (window.pageYOffset > 500) {
+        gsap.to(toTopBtn, .2, {
+          x: 0
+        });
+      } else {
+        gsap.to(toTopBtn, .2, {
+          x: 100
+        })
+      }
+    }, 300));
+
+    toTopBtn.addEventListener('click', function () {
+      wrapper.scrollIntoView({
+        behavior: "smooth"
+      });
+    });
+
+    changeImg();
+
+    function changeImg() {
+      var imgEl = toTopBtn.querySelector('img.punch');
+      var imgUrl = ['punch1.svg', 'punch2.svg', 'punch3.svg', 'punch4.svg'];
+      var chosenImgUrl = imgUrl[Math.floor(Math.random() * imgUrl.length)];
+
+      imgEl.setAttribute('src', `https://jeon-hyerin.github.io/cotieshop/img/${chosenImgUrl}`);
+    }
   </script>
+
 </body>
 </html>
