--- a/html/indoor.html
+++ b/html/indoor.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-title" content="INDOOR | 꼬띠샵" />
   <meta name="description" content="편안한 공간 속 휴식을 취할때에도 작은 디테일의 차이가 큰 변화를 느끼게 해줍니다. 꼬띠샵이 큐레이션하는 제품들은 반려동물들이 원하는게 무엇인지 정확히 알고 해결해줄 수 있는 제품을 추천합니다." />
-
   <title>INDOOR | 꼬띠샵</title>
-
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="꼬띠샵" />
@@ -16,7 +14,6 @@
   <meta property="og:description" content="편안한 공간 속 휴식을 취할때에도 작은 디테일의 차이가 큰 변화를 느끼게 해줍니다. 꼬띠샵이 큐레이션하는 제품들은 반려동물들이 원하는게 무엇인지 정확히 알고 해결해줄 수 있는 제품을 추천합니다." />
   <meta property="og:image" content="../img/og_image.jpg" />
   <meta property="og:url" content="https://jeon-hyerin.github.io/cotieshop/" />
-
     <!--Twitter Card-->
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:site" content="꼬띠샵" />
@@ -24,17 +21,8 @@
   <meta property="twitter:description" content="편안한 공간 속 휴식을 취할때에도 작은 디테일의 차이가 큰 변화를 느끼게 해줍니다. 꼬띠샵이 큐레이션하는 제품들은 반려동물들이 원하는게 무엇인지 정확히 알고 해결해줄 수 있는 제품을 추천합니다." />
   <meta property="twitter:image" content="../img/og_image.jpg" />
   <meta property="twitter:url" content="https://jeon-hyerin.github.io/cotieshop" />
-
   <!-- Favicon -->
   <link rel="shortcut icon" href="../favicon.png" />
-  <!-- Google Fonts - Noto Sans KR -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet" />
-<!-- Google Fonts - Libre Baskerville -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
   <!-- Google Material Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <!-- Font Awesome -->
@@ -48,141 +36,38 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>  
   <!--GSAP-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
-
+  <!-- CSS -->
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style_pc.css" media="screen and (min-width: 850.1px)" />
   <link rel="stylesheet" href="../css/style_mobile.css" media="screen and (max-width: 850.0px)" />
-
+  <!-- JS -->
   <script src="../js/jquery-3.6.0.min.js"></script>
   <script defer src="../js/swiper.js"></script>
+  <script defer src="../js/include.js"></script>
   <script defer src="../js/common.js"></script>
-
 </head>
-<body class="sub indoor living">
+<body class="sub indoor toy">
+
   <div id="wrapper">
     <a href="#main" id="skip-nav">본문 바로가기</a>
-
-    <!-- HEADER -->
-    <header id="header">
-      <div class="inner">
-        <h1><a href="../index.html"><img src="../img/header_logo.svg" alt="cotie SHOP" /></a></h1>
-        <a href="#" class="menu-btn mobile">
-          <span></span>
-          <span></span>
-          <span class="hide">네비게이션 열기</span>
-        </a>
-        <a href="#" class="close-btn mobile invisible">
-          <i class="fas fa-times"><span>네비게이션 닫기</span></i>
-        </a>
-        <!-- NAV -->
-        <nav id="gnb">
-          <h2 class="hide">메인 네비게이션</h2>
-          <ul>
-            <li data-link="brands">
-              <a href="../brands.html">Brands</a>
-              <ul class="sub-menu">
-                <li data-menu="pet-so-chic">
-                  <a href="#"><span>펫 소 시크</span></a>
-                </li>
-                <li data-menu="maxbone"><a href="#"><span>맥스본</span></a></li>
-                <li data-menu="milk-pepper"><a href="../brands.html"><span>밀크 앤 페퍼</span></a></li>
-              </ul>
-            </li>
-            <li data-link="outdoor">
-              <a href="../outdoor.html">Outdoor</a>
-              <ul class="sub-menu">
-                <li data-menu="fashion"><a href="../outdoor.html"><span>패션</span></a></li>
-                <li data-menu="collar"><a href="../outdoor/collar.html"><span>목줄</span></a></li>
-                <li data-menu="leash"><a href="../outdoor/leash.html"><span>리드줄</span></a></li>
-                <li data-menu="harness"><a href="../outdoor/harness.html"><span>하네스</span></a></li>
-                <li data-menu="bag"><a href="../outdoor/bag.html"><span>이동가방</span></a></li>
-              </ul>
-            </li>
-            <li data-link="indoor">
-              <a href="../indoor.html">Indoor</a>
-              <ul class="sub-menu">
-                <li data-menu="toy"><a href="../indoor.html"><span>장난감</span></a></li>
-                <li data-menu="living"><a href="./living.html"><span>리빙</span></a></li>
-                <li data-menu="cat"><a href="./cat.html"><span>고양이</span></a></li>
-              </ul>
-            </li>
-            <li data-link="cotielog"><a href="../cotielog.html">Cotielog</a></li>
-            <li data-link="store"><a href="../store.html">Store</a></li>
-            <li data-link="about-us" class="mobile"><a href="#">About Us</a></li>
-            <li data-link="buy-shop" class="mobile"><a href="#">Buy Shop</a></li>
-          </ul>
-        </nav>
-        <ul class="top-menu">
-          <li>
-            <a href="#">
-              <i class="fas fa-search"></i>
-              <span class="hide">검색창 열기</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span>Buy Shop</span>
-              <i class="fas fa-shopping-bag"></i>
-            </a>
-          </li>
-        </ul>
-
-      </div>
-    </header>
-
-    <!-- SEARCH MODAL -->
-    <div class="search-modal__wrap invisible">
-      <div id="search-modal">
-        <div class="inner">
-
-          <h2 class="hide">검색창</h2>
-
-          <div class="search-modal__header">
-            <a href="../index.html" class="logo pc">
-              <img src="../img/header_logo.svg" alt="cotie SHOP" />
-            </a>
-            <a href="#" class="close-btn">
-              <i class="fas fa-times"><span>닫기</span></i>
-            </a>
-          </div>
-          <div class="search-modal__field">
-            <form action="#">
-              <input type="text" placeholder="검색어를 입력해주세요">
-            </form>
-            <a href="#">
-              <i class="fas fa-search"></i>
-            </a>
-          </div>
-          <div class="search-modal__keyword">
-            <ul>
-              <li><a href="#">#겨울</a></li>
-              <li><a href="#">#패딩</a></li>
-              <li><a href="#">#프랑스</a></li>
-              <li><a href="#">#후드</a></li>
-              <li><a href="#">#장난감</a></li>
-            </ul>
-          </div>
-          <img src="../img/layer_twerking.gif" alt="" class="floating" />
-        </div>
-      </div>
-    </div>
-
+    <!-- HEADER INCLUDE -->
+    <div class="header-include"></div>
+    <!-- SEARCH MODAL INCLUDE -->
+    <div class="search-modal-include"></div>
     <!-- MAIN -->
     <main id="main">
       <!-- INDOOR -->
       <section class="indoor">
         <h2 class="hide">실내용품</h2>
         <div class="inner">
-
           <h3>Indoor</h3>
           <ul class="indoor__menu category">
-            <li data-menu="toy"><a href="#">장난감</a></li>
-            <li class="active" data-menu="living"><a href="#">리빙</a></li>
+            <li class="active" data-menu="toy"><a href="#">장난감</a></li>
+            <li data-menu="living"><a href="#">리빙</a></li>
             <li data-menu="cat"><a href="#">고양이</a></li>
           </ul>
-
           <div class="indoor__content">
-            <ul class="product product__menu" data-type="toy">
+            <ul class="product product__menu visible" data-type="toy">
               <li>
                 <a href="#">
                   <div class="image">
@@ -242,7 +127,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="product product__menu visible" data-type="living">
+            <ul class="product product__menu" data-type="living">
               <li>
                 <a href="#">
                   <div class="image">
@@ -546,70 +431,8 @@
         </div>
       </section>
     </main>
-
-    <!-- FOOTER -->
-    <footer id="footer">
-      <div class="footer__layer"></div>
-      <div class="inner">
-
-        <div class="row">
-          <ul class="footer__menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Buy Shop</a></li>
-          </ul>
-          <ul class="footer__links">
-            <li>
-              <a href="https://www.facebook.com/cotieshop.co.kr/" target="_blank">
-                <span class="pc">facebook</span>
-                <i class="fab fa-facebook-f mobile"><span>facebook</span></i>
-              </a>
-            </li>
-            <li><a href="https://www.instagram.com/cotie_shop/" target="_blank">
-                <span class="pc">instagram</span>
-                <i class="fab fa-instagram mobile"><span>instagram</span></i>
-              </a>
-            </li>
-            <li><a href="https://accounts.kakao.com/login?continue=http%3A%2F%2Fpf.kakao.com%2F_ivZMs%2Fchat"
-                target="_blank"><i class="fas fa-comment"></i></a></li>
-          </ul>
-        </div>
-        <div class="row">
-          <div class="info">
-            <a href="#">
-              <span>Cotieshop</span>
-              <i class="fas fa-chevron-down"></i>
-            </a>
-            <div>
-              <div class="wrap">
-                <span>
-                  주식회사 델핀 서울특별시 용산구 우사단로2길 1, 3층 대표 : 신승호 사업자 등록번호 : 113-86-83830
-                </span>
-                <address>
-                  04413 서울특별시 용산구 우사단로2길 1 (보광동) TEL : 02-2678-3096~7 FAX : 02-2678-3099
-                </address>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <p class="copyright">
-            Copyright <span class="this-year"></span>. Cotieshop All rights reserved.
-          </p>
-        </div>
-      </div>
-    </footer>
-
-    <!-- TO TOP BUTTON -->
-    <a href="#" id="to-top">
-      <i class="fas fa-chevron-up"></i>
-      <span>top</span>
-      <div class="to-top-punch">
-        <img src="../img/to_top_scratch1.svg" alt="" class="scratch1" />
-        <img src="../img/to_top_scratch2.svg" alt="" class="scratch2" />
-        <img src="../img/punch1.svg" alt="" class="punch" />
-      </div>
-    </a>
-
+    <!-- FOOTER INCLUDE -->
+    <div class="footer-include"></div>
   </div>
 
   <script>
@@ -634,5 +457,6 @@
       });
     });
   </script>
+
 </body>
 </html>
